--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ Flask-CORS==4.0.0
 ar-corrector==1.1.6
 pyspellchecker==0.8.3
 pandas==2.3.1
-gunicorn
+transformers==4.35.0
+torch==2.1.0
+gunicorn==21.2.0
