--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Flask==2.3.3
 Flask-CORS==4.0.0
+ar-corrector==1.1.6
+pyspellchecker==0.8.3
 pandas==2.3.1
 transformers==4.35.0
-torch==2.5.0  # أو أي إصدار أحدث متاح
+torch==2.5.0
 gunicorn==21.2.0
