--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
---prefer-binary
 Flask==2.3.3
-Flask-Cors==4.0.0
+Flask-CORS==4.0.0
 pandas==2.3.1
-transformers
-torch==2.5.0
 gunicorn==21.2.0
-./tokenizers-0.21.4-cp39-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
